# ResearchOS

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: coveralls.yml
docs/: .pages  getting_started.md  index.md
docs/DiGraph/: digraph.md
docs/Getting Started/: .pages  first_project.md  installation.md  usage_orig.md
docs/Home/: .pages  roadmap.md
docs/Research Object Types/Data Object Types/: dataset.md
docs/Research Object Types/Pipeline Object Types/: logsheet.md  process.md  subset.md
docs/Research Objects/: research_object.md  variable.md
docs/Research Objects/Data Objects/: .pages  data_object.md  dataset.md  defining_data_objects.md
docs/Research Objects/Pipeline Objects/: .pages  analysis.md  logsheet.md  pipeline_object.md  plot.md  process.md  project.md  runnables.md  stats.md  subset.md
docs/SQL Database/: config.md  index.md
how_to/: matlab_from_python.md  mkdocs.md
src/ResearchOS/: __init__.py  action.py  code_runner.py  current_user.py  db_initializer.py  default_attrs.py  get_computer_id.py  idcreator.py  json_converter.py  plot_runner.py  process_runner.py  research_object.py  research_object_handler.py  sqlite_pool.py  stats_runner.py  validator.py  var_converter.py  variable.py  vr_handler.py
src/ResearchOS/DataObjects/: data_object.py  dataset.py
src/ResearchOS/Digraph/: data_digraph.py  pipeline_digraph.py  rodigraph.py
src/ResearchOS/PipelineObjects/: logsheet.py  plot.py  process.py  project.py  stats.py  subset.py
src/ResearchOS/config/: config.json  sql.json
src/ResearchOS/matlab/: PlotWrapper.m  matlab_runner.m
src/ResearchOS/sql/: action_insert.sql  active_vrid_of_dobj_insert.sql  (+13 more)
tests/: conftest.py  test_2_ro_creation.py
(+5 files in other folders)
