[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/docs",
  "/how_to",
  "mkdocs.yml",
  "requirements_dev.txt",
  "pypi_upload_instructions.md",
  "dev_env_file.py",
  "researchos.db",
  "researchos_data.db",
  "Spr23TWW_OA_AllSubjects_032323_TEST.csv",
  "Spr23TWW_OA_AllSubjects_032323.xlsx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ResearchOS"]

[project]
name = "ResearchOS"
version = "0.0.14"
requires-python = ">=3.0.0"
authors = [
    {name = "Mitchell Tillman <mtillman14@gmail.com>"},
]
description = "Operating system for scientific research."
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",    
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
# Runtime dependencies
dependencies = [
  "networkx>=3.2.1",
  "numpy>=1.26.4"
]

[project.optional-dependencies]
# Development dependencies
dev = [
  "pytest",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python"
]

[project.urls]
Documentation = "https://researchos.github.io/ResearchOS/"
Repository = "https://github.com/ResearchOS/ResearchOS"